@@ -1,1 +1,1 @@
-agar.gui.widget.file_dialog agar-gui-widget-file_dialog.ads
+agar.gui.widget.file_dialog agar-gui-widget-file_dialog.ads agar-gui-widget-file_dialog.adb
